# nadiya-cyber-org

./: .gitignore  MIGRATION_GUIDE.md  README.md  README_BATCH_WORKFLOW.md  RESEARCH_DOCUMENTATION.md  SUMMARY.md  pyproject.toml
data/: __init__.py  countries.csv  domains.csv
docs/: BATCH_WORKFLOW_GUIDE.md
notebooks/: batch_ministry_collect.ipynb  cyber_relevance_collect.ipynb  minimal_example.ipynb  organization.db  organization_collect.ipynb  organization_cyber.db  organization_cyber.xlsx  organization_cyber_collect.ipynb  organization_names.xlsx  original_cyber.db  original_cyber_answers.xlsx  original_cyber_collect.ipynb
notebooks/archive/: cyber_relevance.db  cyber_responsibility.db  cyber_responsibility_collect.ipynb  cyber_responsibility_results.xlsx  original_cyber_.db
notebooks/justice/: organization.db  organization_collect.ipynb  organization_cyber.db  organization_cyber_collect.ipynb  organization_cyber_justice.xlsx  organization_names_justice.csv  organization_names_justice.xlsx  ~$organization_cyber_justice.xlsx
outputs/defense/: organization.db  organization_cyber.db  organization_cyber_defense.xlsx  organization_names_defense.csv
outputs/education/: organization.db  organization_cyber.db  organization_cyber_education.xlsx  organization_names_education.csv
outputs/foreign_affairs/: organization.db  organization_cyber.db  organization_cyber_foreign_affairs.xlsx  organization_names_foreign_affairs.csv
outputs/science_&_technology/: organization.db  organization_cyber.db  (+2 more)
scripts/: batch_ministry_workflow.py
(+1 files in other folders)
